--- a/ml/python/BuildingStyleGAN.ipynb
+++ b/ml/python/BuildingStyleGAN.ipynb
@@ -35,12 +35,20 @@
     "\n",
     "We could state this more explicitly as:\n",
     "\n",
-    "$$ Z, W \\in \\mathbb{R}^{512} $$"
+    "$$ Z, W \\in \\mathbb{R}^{512} $$\n",
+    "\n",
+    "All that this means is that both $Z$ and $W$ are lists of real numbers that have 512 entries ( `[1.1, 2.65, 3.141, ..., 6.022]` ).\n",
+    "\n",
+    "### Multilayer Perceptron\n",
+    "\n",
+    "But what, exactly, is a \"multilayer perceptron\"?\n",
+    "\n",
+    "An MLP is a "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,32 +61,6 @@
     "    def forward(self, z):\n",
     "        return self.mlp(z)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-e4967075733a>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-4-e4967075733a>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    def __init__(self, )\u001b[0m\n\u001b[1;37m                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "class SynthesisNetwork(nn.Module):\n",
-    "    def __init__(self, )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
