Add multilayer perceptron math detail

--- a/ml/python/BuildingStyleGAN.ipynb
+++ b/ml/python/BuildingStyleGAN.ipynb
@@ -37,13 +37,20 @@
     "\n",
     "$$ Z, W \\in \\mathbb{R}^{512} $$\n",
     "\n",
-    "All that this means is that both $Z$ and $W$ are lists of real numbers that have 512 entries ( `[1.1, 2.65, 3.141, ..., 6.022]` ).\n",
+    "All that this means is that both $Z$ and $W$ are vectors of real numbers that have 512 entries ( `[1.1, 2.65, 3.141, ..., 6.022]` ).\n",
     "\n",
     "### Multilayer Perceptron\n",
     "\n",
     "But what, exactly, is a \"multilayer perceptron\"?\n",
     "\n",
-    "An MLP is a "
+    "An MLP is a very simple kind of neural network that simply takes a vector input, multiplies it with a weight matrix to get another vector, and then repeats for some number of layers. Formally:\n",
+    "\n",
+    "$$ x \\in \\mathbb{R}^{1 \\times m} $$\n",
+    "$$ w \\in \\mathbb{R}^{m \\times n} $$\n",
+    "$$ y = \\sigma(x \\cdot w) $$\n",
+    "$$ y \\in \\mathbb{R}^{1 \\times n} $$\n",
+    "\n",
+    "This is essentially just a vector, matrix product with the addition of a nonlinear activation function ($\\sigma$). Notably, if the weight matrix $w$ is square, $x$ and $y$ will be the same dimension, and this is what is happening in the Mapping Network."
    ]
   },
   {
