Update MappingNetwork to inherit from Sequential directly
It was a bit unclear that MappingNetwork itself is acting as an MLP
when it contained a property `.mlp`. This commit changes the class
to inherit from `nn.Sequential` directly and adds the named modules
in `__init__` to make its structure more obvious.

--- a/ml/python/BuildingStyleGAN.ipynb
+++ b/ml/python/BuildingStyleGAN.ipynb
@@ -2,13 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as nnf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# To Add:\n",
+    "\n",
+    "Sequences of stuff (list comprehensions)\n",
+    "\n",
+    "Tensor intro\n",
+    "\n",
+    "Drawing with tensors\n",
+    "\n",
+    "Math = Drawing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sequences\n",
+    "\n",
+    "## Expansion and Reduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tensors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tensors are Drawings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Math is Drawings"
    ]
   },
   {
@@ -47,27 +92,72 @@
     "\n",
     "$$ x \\in \\mathbb{R}^{1 \\times m} $$\n",
     "$$ w \\in \\mathbb{R}^{m \\times n} $$\n",
-    "$$ y = \\sigma(x \\cdot w) $$\n",
     "$$ y \\in \\mathbb{R}^{1 \\times n} $$\n",
     "\n",
-    "This is essentially just a vector, matrix product with the addition of a nonlinear activation function ($\\sigma$). Notably, if the weight matrix $w$ is square, $x$ and $y$ will be the same dimension, and this is what is happening in the Mapping Network."
+    "This is essentially just a vector, matrix product. If $m \\gt n$ then the layer will be performing data reduction, if $m \\lt n$ then it will be performing data expansion. Notably, if the weight matrix $w$ is square, $x$ and $y$ will be the same dimension, and this is what is happening in the Mapping Network. There is also no mention of a nonlinearity applied to the Mapping Network in the paper, so our construction in code is very straightforward."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MappingNetwork(nn.Module):\n",
-    "    def __init__(self, num_layers=8, in_features=512):\n",
+    "class MappingNetwork(nn.Sequential):\n",
+    "    def __init__(self, layer_count=8, latent_dim=512):\n",
     "        super(MappingNetwork, self).__init__()\n",
-    "        \n",
-    "        self.mlp = nn.Sequential(*[nn.Linear(in_features, in_features) for _ in range(num_layers)])\n",
-    "    \n",
-    "    def forward(self, z):\n",
-    "        return self.mlp(z)"
+    "\n",
+    "        for layer_number in range(layer_count):\n",
+    "            layer_name = \"linear_{}\".format(layer_number)\n",
+    "            layer = nn.Linear(latent_dim, latent_dim)\n",
+    "            self.add_module(layer_name, layer)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Math Note\n",
+    "\n",
+    "$$ f \\sim mn $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MappingNetwork(\n",
+       "  (linear_0): Linear(in_features=512, out_features=512, bias=True)\n",
+       "  (linear_1): Linear(in_features=512, out_features=512, bias=True)\n",
+       "  (linear_2): Linear(in_features=512, out_features=512, bias=True)\n",
+       "  (linear_3): Linear(in_features=512, out_features=512, bias=True)\n",
+       "  (linear_4): Linear(in_features=512, out_features=512, bias=True)\n",
+       "  (linear_5): Linear(in_features=512, out_features=512, bias=True)\n",
+       "  (linear_6): Linear(in_features=512, out_features=512, bias=True)\n",
+       "  (linear_7): Linear(in_features=512, out_features=512, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mn = MappingNetwork()\n",
+    "mn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
