--- a/ml/python/BuildingStyleGAN.ipynb
+++ b/ml/python/BuildingStyleGAN.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import OrderedDict as odict\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as nnf"
@@ -150,6 +151,222 @@
    "source": [
     "mn = MappingNetwork()\n",
     "mn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Synthesis Network\n",
+    "\n",
+    "The authors' diagram of the Synthesis Network shows a repeating block of upsample, convolution, noise scaling/addition, and a function that they define called `AdaIN`.\n",
+    "$$ W \\in \\mathbb{R}^n $$\n",
+    "$$ Y \\in \\mathbb{R}^{2n} $$\n",
+    "$$ A : W \\rightarrow Y $$\n",
+    "\n",
+    "$Y$ can be thought of as a style space where the scalar components are parameters that control both how strongly feature maps in $x$ are carried forward, and how much it is shifted around the style space.\n",
+    "\n",
+    "$$ AdaIN(x_i, y) = y_{s, i}\\frac{x_i - \\mu(x_i)}{\\sigma(x_i)} + y_{b, i} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class A(nn.Module):\n",
+    "    def __init__(self, in_features):\n",
+    "        super(A, self).__init__()\n",
+    "        self.affine = nn.Linear(in_features, 2 * in_features)\n",
+    "    \n",
+    "    def forward(self, w):\n",
+    "        return self.affine(w).reshape(2, -1)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class B(nn.Module):\n",
+    "    def __init__(self, height, width, num_features):\n",
+    "        super(B, self).__init__()\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "        self.num_features = num_features\n",
+    "        \n",
+    "        self.noise_image = torch.randn(1, 1, height, width)\n",
+    "        \n",
+    "        self.scaling_factors = torch.nn.Parameter(data=torch.randn(1, num_features, 1, 1), requires_grad=True)\n",
+    "        \n",
+    "    def forward(self):\n",
+    "        return self.scaling_factors.expand(1, -1, self.height, self.width) * self.noise_image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AdaIN(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(AdaIN, self).__init__()\n",
+    "        \n",
+    "    def forward(self, x, y):\n",
+    "        mu_x    = x.mean(dim=(0, 2, 3)).reshape(1, -1, 1, 1)\n",
+    "        sigma_x = x.std(dim=(0, 2, 3)).reshape(1, -1, 1, 1)\n",
+    "        \n",
+    "        normed_x = (x - mu_x) / sigma_x\n",
+    "        \n",
+    "        y = y.reshape(2, -1, 1, 1)\n",
+    "        \n",
+    "        return (y[0, :] * x) + y[1, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PixelNorm(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(PixelNorm, self).__init__()\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        n, c, h, w = x.shape\n",
+    "        mu_x = x.mean(dim=(0, 1)).reshape(n, 1, h, w)\n",
+    "        sigma_x = x.std(dim=(0, 1)).reshape(n, 1, h, w)\n",
+    "        \n",
+    "        normed_x = (x - mu_x) / sigma_x\n",
+    "        \n",
+    "        return normed_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ConvBlock(nn.Module):\n",
+    "    def __init__(self, in_channels, out_channels):\n",
+    "        super(ConvBlock, self).__init__()\n",
+    "        \n",
+    "        self.conv = nn.Conv2d(in_channels, out_channels, (3, 3), 1, 1)\n",
+    "        self.conv.weight.data.normal_(0, 1)\n",
+    "        self.conv.bias.data.fill_(0)\n",
+    "        \n",
+    "        self.norm = PixelNorm()\n",
+    "        self.act = nn.LeakyReLU(negative_slope=0.2)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = self.conv(x)\n",
+    "        x = self.norm(x)\n",
+    "        x = self.act(x)\n",
+    "        \n",
+    "        return x     \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SynthesisBlock(nn.Module):\n",
+    "    def __init__(self, in_channels, out_channels, height, width):\n",
+    "        super(SynthesisBlock, self).__init__()\n",
+    "        \n",
+    "        self.upsample = nn.UpsamplingBilinear2d((height, width))\n",
+    "        self.conv0 =    ConvBlock(in_channels, out_channels)\n",
+    "        self.b0 =       B(height, width, out_channels)\n",
+    "        self.a0 =       A(out_channels)\n",
+    "        self.adain0 =   AdaIN()\n",
+    "        \n",
+    "        self.conv1 =    ConvBlock(out_channels, out_channels)\n",
+    "        self.b1 =       B(height, width, out_channels)\n",
+    "        self.a1 =       A(out_channels)\n",
+    "        self.adain1 =   AdaIN()\n",
+    "    \n",
+    "    def forward(self, x, w):\n",
+    "\n",
+    "        \n",
+    "        x = self.upsample(x)\n",
+    "        x = self.conv0(x)\n",
+    "        x = x + self.b0()\n",
+    "        print(w.shape)\n",
+    "        y = self.a0(w)\n",
+    "        x = self.adain0(x, y)\n",
+    "        \n",
+    "        x = self.conv1(x)\n",
+    "        x = x + self.b1()\n",
+    "        y = self.a1(w)\n",
+    "        x = self.adain1(x, y)\n",
+    "        \n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 4])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SynthesisBlock(\n",
+       "  (upsample): UpsamplingBilinear2d(size=(8, 8), mode=bilinear)\n",
+       "  (conv0): ConvBlock(\n",
+       "    (conv): Conv2d(3, 4, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (norm): PixelNorm()\n",
+       "    (act): LeakyReLU(negative_slope=0.2)\n",
+       "  )\n",
+       "  (b0): B()\n",
+       "  (a0): A(\n",
+       "    (affine): Linear(in_features=4, out_features=8, bias=True)\n",
+       "  )\n",
+       "  (adain0): AdaIN()\n",
+       "  (conv1): ConvBlock(\n",
+       "    (conv): Conv2d(4, 4, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (norm): PixelNorm()\n",
+       "    (act): LeakyReLU(negative_slope=0.2)\n",
+       "  )\n",
+       "  (b1): B()\n",
+       "  (a1): A(\n",
+       "    (affine): Linear(in_features=4, out_features=8, bias=True)\n",
+       "  )\n",
+       "  (adain1): AdaIN()\n",
+       ")"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w_dim = 4\n",
+    "\n",
+    "sb = SynthesisBlock(3, w_dim, 8, 8)\n",
+    "x = torch.randn(1, 3, 4, 4)\n",
+    "w = torch.randn(1, w_dim)\n",
+    "\n",
+    "sb(x, w)\n",
+    "\n",
+    "sb"
    ]
   },
   {
