Update PixelNorm to be per channel

--- a/ml/python/BuildingStyleGAN.ipynb
+++ b/ml/python/BuildingStyleGAN.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,8 +239,8 @@
     "        \n",
     "    def forward(self, x):\n",
     "        n, c, h, w = x.shape\n",
-    "        mu_x = x.mean(dim=(0, 1)).reshape(n, 1, h, w)\n",
-    "        sigma_x = x.std(dim=(0, 1)).reshape(n, 1, h, w)\n",
+    "        mu_x = x.mean(dim=(1)).reshape(n, 1, h, w)\n",
+    "        sigma_x = x.std(dim=(1)).reshape(n, 1, h, w)\n",
     "        \n",
     "        normed_x = (x - mu_x) / sigma_x\n",
     "        \n",
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,6 @@
     "        x = self.upsample(x)\n",
     "        x = self.conv0(x)\n",
     "        x = x + self.b0()\n",
-    "        print(w.shape)\n",
     "        y = self.a0(w)\n",
     "        x = self.adain0(x, y)\n",
     "        \n",
@@ -314,59 +313,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sb = SynthesisBlock(512, 512, 4, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1, 4])\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "SynthesisBlock(\n",
-       "  (upsample): UpsamplingBilinear2d(size=(8, 8), mode=bilinear)\n",
+       "  (upsample): UpsamplingBilinear2d(size=(4, 4), mode=bilinear)\n",
        "  (conv0): ConvBlock(\n",
-       "    (conv): Conv2d(3, 4, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (conv): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
        "    (norm): PixelNorm()\n",
        "    (act): LeakyReLU(negative_slope=0.2)\n",
        "  )\n",
        "  (b0): B()\n",
        "  (a0): A(\n",
-       "    (affine): Linear(in_features=4, out_features=8, bias=True)\n",
+       "    (affine): Linear(in_features=512, out_features=1024, bias=True)\n",
        "  )\n",
        "  (adain0): AdaIN()\n",
        "  (conv1): ConvBlock(\n",
-       "    (conv): Conv2d(4, 4, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (conv): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
        "    (norm): PixelNorm()\n",
        "    (act): LeakyReLU(negative_slope=0.2)\n",
        "  )\n",
        "  (b1): B()\n",
        "  (a1): A(\n",
-       "    (affine): Linear(in_features=4, out_features=8, bias=True)\n",
+       "    (affine): Linear(in_features=512, out_features=1024, bias=True)\n",
        "  )\n",
        "  (adain1): AdaIN()\n",
        ")"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "w_dim = 4\n",
-    "\n",
-    "sb = SynthesisBlock(3, w_dim, 8, 8)\n",
-    "x = torch.randn(1, 3, 4, 4)\n",
-    "w = torch.randn(1, w_dim)\n",
-    "\n",
-    "sb(x, w)\n",
-    "\n",
     "sb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[[-1.1255, -1.2977,  0.2635,  0.0455],\n",
+       "          [-0.1651, -0.8773,  0.1759, -0.5719],\n",
+       "          [-0.1444, -0.6601,  0.7944, -1.1124],\n",
+       "          [-0.1543, -0.7806, -0.0418,  0.2998]],\n",
+       "\n",
+       "         [[ 1.1772,  1.6378,  0.7707,  0.7288],\n",
+       "          [ 1.0830,  0.8333,  0.7415,  0.6426],\n",
+       "          [ 0.8833,  0.8149,  0.6699,  0.9392],\n",
+       "          [ 0.8603,  1.0329,  0.8100,  0.5590]],\n",
+       "\n",
+       "         [[-0.4264, -0.4274, -0.3183, -0.3637],\n",
+       "          [-0.3772, -0.4237, -0.3478, -0.3866],\n",
+       "          [-0.4241, -0.4003, -0.3102, -0.4323],\n",
+       "          [-0.3712, -0.3859, -0.3717, -0.4046]],\n",
+       "\n",
+       "         ...,\n",
+       "\n",
+       "         [[ 0.8680,  0.8238,  0.6649,  0.7425],\n",
+       "          [ 0.7565,  0.7942,  0.7109,  0.7464],\n",
+       "          [ 0.7294,  0.7699,  0.6533,  0.8193],\n",
+       "          [ 0.7353,  0.7739,  0.7147,  0.7038]],\n",
+       "\n",
+       "         [[-0.0559,  0.0491,  0.5194,  0.4267],\n",
+       "          [ 0.4789,  0.4356,  0.8297,  0.2365],\n",
+       "          [ 0.0794,  0.5509,  0.2798,  0.2563],\n",
+       "          [ 0.6123,  0.9285,  0.8353,  0.9614]],\n",
+       "\n",
+       "         [[-0.3897, -0.3898, -0.3915, -0.3917],\n",
+       "          [-0.3910, -0.3902, -0.3912, -0.3908],\n",
+       "          [-0.3909, -0.3906, -0.3921, -0.3900],\n",
+       "          [-0.3910, -0.3904, -0.3912, -0.3911]]]], grad_fn=<AddBackward0>)"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.randn(1, 512, 4, 4)\n",
+    "w = torch.randn(1, 512)\n",
+    "sb(x, w)"
    ]
   },
   {
