--- a/ml/python/BuildingStyleGAN.ipynb
+++ b/ml/python/BuildingStyleGAN.ipynb
@@ -228,23 +228,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PixelNorm\n",
+    "From the [Progressive Growing of GANs paper](https://arxiv.org/pdf/1710.10196.pdf), section 4.2, the authors detail the per-pixel normalization function as:\n",
+    "\n",
+    "$$ b_{x, y} = \\frac{a_{x, y}}{\\sqrt{\\frac{1}{n}\\Sigma_{j=0}^{n-1}{(a^{j}_{x, y})^2 + \\epsilon}}} $$\n",
+    "\n",
+    "where $\\epsilon = 10^{-8}$ and $n$ is the number of feature maps."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "class PixelNorm(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(PixelNorm, self).__init__()\n",
+    "        self.epsilon = 10 ** -8\n",
     "        \n",
     "    def forward(self, x):\n",
     "        n, c, h, w = x.shape\n",
-    "        mu_x = x.mean(dim=(1)).reshape(n, 1, h, w)\n",
-    "        sigma_x = x.std(dim=(1)).reshape(n, 1, h, w)\n",
-    "        \n",
-    "        normed_x = (x - mu_x) / sigma_x\n",
-    "        \n",
-    "        return normed_x"
+    "        d = x.pow(2)\n",
+    "        d = d.sum(dim=(1)) + self.epsilon\n",
+    "        d = d.mul(1 / c)\n",
+    "        d = d.sqrt()\n",
+    "        d = d.unsqueeze(1)\n",
+    "\n",
+    "        return x / d"
    ]
   },
   {
@@ -416,10 +430,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-2.4910,  0.2391, -0.4201]])\n",
+      "tensor([[-2.4120,  0.9979, -1.9914]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.randn(1, 3, requires_grad=True)\n",
+    "y = torch.randn(3, 2, requires_grad=True)\n",
+    "\n",
+    "z = x @ y\n",
+    "z0 = z[:, 0]\n",
+    "z1 = z[:, 1]\n",
+    "z1.backward(retain_graph=True)\n",
+    "print(x.grad)\n",
+    "z0.backward()\n",
+    "print(x.grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nn.MSELoss"
+   ]
   }
  ],
  "metadata": {
