Update notebook typos

--- a/ml/python/AIASF.ipynb
+++ b/ml/python/AIASF.ipynb
@@ -105,11 +105,11 @@
         "    # Do some math\n",
         "    x = 2\n",
         "    \n",
-        "    # Raise two to the power that the user specifies with `number`\n",
-        "    result = 2 ** number\n",
+        "    # Raise x to the power that the user specifies with `number`\n",
+        "    result = x ** number\n",
         "    \n",
         "    # Add that to our message\n",
-        "    message += \"2 to the power of {} is {}\".format(number, result)\n",
+        "    message += \"{} to the power of {} is {}\".format(x, number, result)\n",
         "    \n",
         "    # Print the message\n",
         "    print(message)\n",
@@ -119,7 +119,7 @@
         "\n",
         "# Use parentheses `()` after a function name to call it\n",
         "# Any arguments that it requires are put in order inside the parens\n",
-        "some_power_of_two = demo_function(\"Tyler\", 8)\n",
+        "some_power_of_two = demo_function(\"World\", 8)\n",
         "\n",
         "# The last value in the cell will be appended to the output\n",
         "some_power_of_two\n",
@@ -153,7 +153,8 @@
         "colab": {}
       },
       "source": [
-        "# Import a lot of packages for interacting with the filesystem, doing math, working with images, and building neural networks\n",
+        "# Import a lot of packages for interacting with the filesystem,\n",
+        "# doing math, working with images, and building neural networks\n",
         "\n",
         "import sys\n",
         "import os\n",
@@ -206,10 +207,10 @@
         "        \n",
         "        # Add 2 sets of layers \n",
         "        # Set 0\n",
-        "        self.conv0 = nn.Conv2d(3, 6, (3, 3))\n",
+        "        self.conv0 = nn.Conv2d(3, 6, (3, 3), 2, 1)\n",
         "        self.act0 = nn.LeakyReLU()\n",
         "        # Set 1\n",
-        "        self.conv1 = nn.Conv2d(3, 6, (3, 3))\n",
+        "        self.conv1 = nn.Conv2d(3, 6, (3, 3), 2, 1)\n",
         "        self.act1 = nn.LeakyReLU()\n",
         "    \n",
         "    def forward(self, x):\n",
@@ -228,13 +229,17 @@
       "metadata": {
         "id": "EhlxDfhCX3lM",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "2742b280-7074-4652-e31a-25669d9295e2"
       },
       "source": [
         "# Create an instance of our class\n",
         "nv = NetworkVisualization().cuda()\n",
         "\n",
-        "# Create a fake image made of white noise with the sizes: (1 batch, 3 channels (RGB), 512 pixels high, 512 pixels wide)\n",
+        "# Create a fake image made of white noise with the sizes: (1 image, 3 channels (RGB), 512 pixels high, 512 pixels wide)\n",
         "# Shapes are very important in deep learning\n",
         "fake_image = torch.randn(1, 3, 512, 512).cuda()\n",
         "\n",
@@ -243,10 +248,26 @@
         "\n",
         "# Examine how the neural network changed the shape of our input\n",
         "print(\"Output shape: {}\".format(out.shape))\n",
+        "\n",
+        "# Print out the structure of our network\n",
         "print(nv)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Output shape: torch.Size([1, 6, 256, 256])\n",
+            "NetworkVisualization(\n",
+            "  (conv0): Conv2d(3, 6, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
+            "  (act0): LeakyReLU(negative_slope=0.01)\n",
+            "  (conv1): Conv2d(3, 6, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
+            "  (act1): LeakyReLU(negative_slope=0.01)\n",
+            ")\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -270,7 +291,8 @@
         "colab": {}
       },
       "source": [
-        "# Render the parameters\n",
+        "# Print the parameters\n",
+        "# This is the most literal view of a neural network\n",
         "params = [p for p in list(nv.conv0.parameters())]\n",
         "print(params)"
       ],
@@ -324,7 +346,8 @@
       },
       "source": [
         "# Convolution comes from signal processing\n",
-        "# Look at a simple one-dimensional signal\n",
+        "# We will look at a simple one-dimensional signal\n",
+        "# As a demonstration, this is how you would define a sine wave\n",
         "\n",
         "lim = 8 * np.pi\n",
         "x_axis = np.linspace(-lim, lim, 200)\n",
@@ -1007,6 +1030,52 @@
       "cell_type": "code",
       "metadata": {
         "id": "W_sVtOVEz9xm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "make_dot(output)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fwM3t-9t4rvV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Bhrctd5cBAI2",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Applications (Summary)\n",
+        "\n",
+        "## Just the beginning\n",
+        "\n",
+        "Even with a small amount of data (~100 datapoints), freely available compute power, and a simple neural network, we can begin to train a machine to generate architectural features purely from pixel values, with no _a priori_ knowledge of walls, rooms, stairs, etc.\n",
+        "\n",
+        "Clearly, this is not a product that is ready for commercial use, but a sketch of what could be coming next.\n",
+        "\n",
+        "## Join the conversation\n",
+        "\n",
+        "If you are interested in more, you should check out [Architecture ex Machina](https://www.aem.ai)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FSxkf3YmBCiY",
         "colab_type": "code",
         "colab": {}
       },
