--- a/ml/python/AIASF.ipynb
+++ b/ml/python/AIASF.ipynb
@@ -229,11 +229,7 @@
       "metadata": {
         "id": "EhlxDfhCX3lM",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 136
-        },
-        "outputId": "2742b280-7074-4652-e31a-25669d9295e2"
+        "colab": {}
       },
       "source": [
         "# Create an instance of our class\n",
@@ -252,22 +248,8 @@
         "# Print out the structure of our network\n",
         "print(nv)"
       ],
-      "execution_count": 42,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Output shape: torch.Size([1, 6, 256, 256])\n",
-            "NetworkVisualization(\n",
-            "  (conv0): Conv2d(3, 6, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
-            "  (act0): LeakyReLU(negative_slope=0.01)\n",
-            "  (conv1): Conv2d(3, 6, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
-            "  (act1): LeakyReLU(negative_slope=0.01)\n",
-            ")\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -406,7 +388,8 @@
         "label[140:171] = 1.0\n",
         "\n",
         "plt.plot(ss, label=\"special signal\")\n",
-        "plt.plot(label, label=\"label\")"
+        "plt.plot(label, label=\"label\")\n",
+        "plt.legend()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1069,7 +1052,7 @@
         "\n",
         "## Join the conversation\n",
         "\n",
-        "If you are interested in more, you should check out [Architecture ex Machina](https://www.aem.ai)"
+        "If you are interested in more, you should check out [Architecture ex Machina](https://www.aexm.ai)"
       ]
     },
     {
